2003-07-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/fvwm.c (main):
	A -Wall fix

2003-07-25  olicha  <olivier.chapuis@free.fr>

	* fvwm/ewmh.c (ewmh_HandleWindowType): 
	Fixed handling of the _NET_WINDOW_TYPE prop when there are more
	that one type and we do not support the first one.

	* fvwm/expand.c (expand_vars_extended): 
	Fixed conflict between extended variables name (desk.name and
	desk.n)

	* fvwm/session.c (callback_save_yourself):
	Respect the SmSaveGlobal save type. This should fix some session
	locking in the sm protocol

	* fvwm/session.c (setSmProperties):
	(SessionInit):
	Set some sm properties when fvwm start for fixing a problem with
	the restart style hint after a restart.

	* fvwm/fvwm.c (get_display_name):
	(usage):
	(main):
	* fvwm/session.c (setSmProperties):
	* fvwm/fvwm.1.in
	Added a possible positive or null arg to --single-screen which
	forces fvwm to start on the "current" display and the given
	screen. Use this to fix fvwm starting under a session manager:
	specify only the screen and not the display.screen for the
	restart sm command.

	* fvwm/fvwm.c (main):
	Fixed possible memory corruption if a display has more than
	10 screens.

	* fvwm/session.c (*):
	Better debuging msg

2003-07-24  Mikhael Goikhman  <migo@homemail.com>

	* M acinclude.m4
	fixed xft/fontconfig detection with pkg-config

	* fvwm/fvwm.1.in:
	corrections in some long option names

2003-07-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (setup_style_and_decor):
	* fvwm/geometry.c (set_window_border_size):
	* fvwm/fvwm.h (FvwmWindow):
	* fvwm/events.c (HandleShapeNotify):
	* fvwm/frame.c (frame_free_move_resize_args):
	(frame_setup_shape):
	(frame_reshape_border):
	fixed resizing of window borders if a window shape was added or deleted
	after the initial window setup

	* fvwm/update.c (apply_window_updates):
	removed unused code

	* fvwm/events.c (__cr_detect_icccm_move):
	disable motion method detection for shaped windows
